Fixed minor style issue on sponsors page which caused layout issues.

--- a/frontend/stylesheets/components/_sponsors.scss
+++ b/frontend/stylesheets/components/_sponsors.scss
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: center;
 
-  &:nth-child(3) {
+  &:nth-child(3n) {
     margin-right: 0;
   }
 
